# signwell-invoicer

./: .env.example  .gitignore  README.md  build.py  build_exe.bat  clients.example.yaml  pyproject.toml  run_gui.py
invoicer/: __main__.py  cli.py  config.py  downloader.py  gui.py  models.py  sender.py  signwell.py  tracking.py
tests/: test_downloader.py  test_signwell.py  test_tracking.py
